# energy-fundies

./: .gitignore  pyproject.toml  requirements.txt
euro-interconnector-pipeline/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  test_diagnostic.py  test_diagnostic2.py  test_diagnostic3.py
euro-interconnector-pipeline/config/: borders.yml  zones.yml
euro-interconnector-pipeline/dashboard/: app.py  ftr_app.py
euro-interconnector-pipeline/data/outputs/: congestion_proxy.csv  congestion_proxy.parquet  net_import.csv  net_import.parquet
euro-interconnector-pipeline/data/raw/physical_flow/AT_CH/: 2024-01.parquet  2024-02.parquet  2024-03.parquet  2024-04.parquet  2024-05.parquet  2024-06.parquet  2024-07.parquet  2024-08.parquet  2024-09.parquet  2024-10.parquet  2024-11.parquet  2024-12.parquet  2025-11.parquet  2025-12.parquet
euro-interconnector-pipeline/data/raw/physical_flow/AT_CZ/: 2024-01.parquet  2024-02.parquet  2024-03.parquet  2024-04.parquet  2024-05.parquet  2024-06.parquet  2024-07.parquet  2024-08.parquet  2024-09.parquet  2024-10.parquet  2024-11.parquet  2024-12.parquet  2025-11.parquet  2025-12.parquet
euro-interconnector-pipeline/docs/: phase1_quickstart.md
euro-interconnector-pipeline/scripts/: entsoe_fms_download.py  regenerate_entsoe_config.py  run_backfill.sh  run_daily.sh  run_dashboard.sh
euro-interconnector-pipeline/src/eicapi/: __init__.py  config.py  db.py  main.py  models.py  queries.py
euro-interconnector-pipeline/src/eicflows/: cli.py  config.py  entsoe_client.py  extract.py  features.py  load.py  schemas.py  transform.py  utils_time.py
euro-interconnector-pipeline/src/fundie/: __init__.py  cli.py
euro-interconnector-pipeline/src/fundie/ftr/: __init__.py  cli.py
euro-interconnector-pipeline/tests/: test_net_import.py  test_sign_convention.py  test_time.py
euro-interconnector-pipeline/tests/ftr/: test_ftr_time.py  test_payoff.py  test_pricing_hs.py  test_synthetic_data.py
(+5875 files in other folders)
