[tool.poetry]
name = "energy-fundies"
version = "0.1.0"
description = ""
authors = []
packages = [{ include = "energy_fundies" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
entsoe-py = "^0.7.10"
pydantic = "^2.12.5"
ipykernel = "^7.1.0"
polars = "^1.37.1"
pyarrow = "^23.0.0"
scikit-learn = "^1.8.0"
matplotlib = "^3.10.8"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

